// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListClickableColumn /> should render a list row wrapped and clickable 1`] = `
<ListClickableColumn
  data={
    Array [
      Object {
        "name": "Test Name",
      },
    ]
  }
  isHeader={false}
  rowIndex={0}
>
  <Anchor
    className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
    href="#"
    onClick={[Function]}
    openInNewTab={false}
  >
    <a
      className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
      href="#"
      onClick={[Function]}
    >
      <div>
        This is my column content
      </div>
    </a>
  </Anchor>
</ListClickableColumn>
`;

exports[`<ListClickableColumn /> should render a list row wrapped and clickable with click events 1`] = `
<ListClickableColumn
  data={
    Array [
      Object {
        "name": "Test Name",
      },
    ]
  }
  handleClick={[Function]}
  isHeader={false}
  rowIndex={0}
>
  <Anchor
    className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
    href="#"
    onClick={[Function]}
    openInNewTab={false}
  >
    <a
      className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
      href="#"
      onClick={[Function]}
    >
      <div>
        This is my column content
      </div>
    </a>
  </Anchor>
</ListClickableColumn>
`;

exports[`<ListClickableColumn /> should render a list row wrapped and clickable with click events 2`] = `
<ListClickableColumn
  data={
    Array [
      Object {
        "name": "Test Name",
      },
    ]
  }
  handleLeftClick={[Function]}
  isHeader={false}
  rowIndex={0}
>
  <Anchor
    className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
    href="#"
    onClick={[Function]}
    openInNewTab={false}
  >
    <a
      className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
      href="#"
      onClick={[Function]}
    >
      <div>
        This is my column content
      </div>
    </a>
  </Anchor>
</ListClickableColumn>
`;

exports[`<ListClickableColumn /> should render a list row wrapped and clickable with url to redirect 1`] = `
<ListClickableColumn
  data={
    Array [
      Object {
        "name": "Test Name",
      },
    ]
  }
  isHeader={false}
  rowIndex={0}
  urlForRow={[Function]}
>
  <Anchor
    className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
    href="test-url.test"
    onClick={[Function]}
    openInNewTab={false}
  >
    <a
      className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
      href="test-url.test"
      onClick={[Function]}
    >
      <div>
        This is my column content
      </div>
    </a>
  </Anchor>
</ListClickableColumn>
`;

exports[`<ListClickableColumn /> should render a simple list row if is header 1`] = `
<ListClickableColumn
  data={
    Array [
      Object {
        "name": "Test Name",
      },
    ]
  }
  isHeader={true}
  rowIndex={0}
>
  <Anchor
    className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
    href="#"
    onClick={[Function]}
    openInNewTab={false}
  >
    <a
      className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
      href="#"
      onClick={[Function]}
    >
      <div>
        This is my column content
      </div>
    </a>
  </Anchor>
</ListClickableColumn>
`;

exports[`<ListClickableColumn /> should render a simple list row with a simple redirect 1`] = `
<ListClickableColumn
  anchorComponentProps={
    Object {
      "someProp": false,
    }
  }
  data={
    Array [
      Object {
        "name": "Test Name",
      },
    ]
  }
  isHeader={false}
  rowIndex={0}
  urlForRow={[Function]}
>
  <Anchor
    anchorComponentProps={
      Object {
        "someProp": false,
      }
    }
    className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
    href="test-url.test"
    onClick={[Function]}
    openInNewTab={false}
  >
    <a
      className="ListClickableColumns clickable-columns cell auto grid-x grid-padding-x"
      href="test-url.test"
      onClick={[Function]}
    >
      <div>
        This is my column content
      </div>
    </a>
  </Anchor>
</ListClickableColumn>
`;
